feat( * ) : structure of project

--- a/src/pages/NotFound/NotFound.css
+++ b/src/pages/NotFound/NotFound.css
@@ -2,7 +2,7 @@
 .not-found div {
     display: flex;
     width: 70%;
-    height: 100'''%;
+    /* height: 100'''%; */
     flex-wrap: wrap;
     gap: 20px;
     border: 1px solid darkgreen;
